--- a/Noob_Test.ipynb
+++ b/Noob_Test.ipynb
@@ -2,16 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'wandb'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-b304df018500>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mwandb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'wandb'"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
     "import torch\n",
+    "import wandb\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
+    "from secret import WANDB_API_KEY\n",
     "from src.model import Transformer\n",
     "from src.utils import subsequent_mask\n",
-    "from src.training import Batch, NoamOptimizer, LabelSmoothing, train_step"
+    "from src.training import (\n",
+    "    Batch, NoamOptimizer,\n",
+    "    LabelSmoothing, train_step\n",
+    ")\n",
+    "from sanity_tests import (\n",
+    "    test_subsequent_mask, test_positional_encoding, test_noam_lr_policy,\n",
+    "    test_label_smoothing_target_distribution, test_label_smoothing_regularization\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: wandb in ./env/lib/python3.7/site-packages (0.9.0)\n",
+      "Requirement already satisfied: shortuuid>=0.5.0 in ./env/lib/python3.7/site-packages (from wandb) (1.0.1)\n",
+      "Requirement already satisfied: sentry-sdk>=0.4.0 in ./env/lib/python3.7/site-packages (from wandb) (0.14.4)\n",
+      "Requirement already satisfied: GitPython>=1.0.0 in ./env/lib/python3.7/site-packages (from wandb) (3.1.3)\n",
+      "Requirement already satisfied: gql==0.2.0 in ./env/lib/python3.7/site-packages (from wandb) (0.2.0)\n",
+      "Requirement already satisfied: Click>=7.0 in ./env/lib/python3.7/site-packages (from wandb) (7.1.2)\n",
+      "Requirement already satisfied: psutil>=5.0.0 in ./env/lib/python3.7/site-packages (from wandb) (5.7.0)\n",
+      "Requirement already satisfied: nvidia-ml-py3>=7.352.0 in ./env/lib/python3.7/site-packages (from wandb) (7.352.0)\n",
+      "Requirement already satisfied: requests>=2.0.0 in ./env/lib/python3.7/site-packages (from wandb) (2.23.0)\n",
+      "Requirement already satisfied: six>=1.10.0 in ./env/lib/python3.7/site-packages (from wandb) (1.15.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in ./env/lib/python3.7/site-packages (from wandb) (2.8.1)\n",
+      "Requirement already satisfied: subprocess32>=3.5.3 in ./env/lib/python3.7/site-packages (from wandb) (3.5.4)\n",
+      "Requirement already satisfied: configparser>=3.8.1 in ./env/lib/python3.7/site-packages (from wandb) (5.0.0)\n",
+      "Requirement already satisfied: PyYAML>=3.10 in ./env/lib/python3.7/site-packages (from wandb) (5.3.1)\n",
+      "Requirement already satisfied: watchdog>=0.8.3 in ./env/lib/python3.7/site-packages (from wandb) (0.10.2)\n",
+      "Requirement already satisfied: docker-pycreds>=0.4.0 in ./env/lib/python3.7/site-packages (from wandb) (0.4.0)\n",
+      "Requirement already satisfied: urllib3>=1.10.0 in ./env/lib/python3.7/site-packages (from sentry-sdk>=0.4.0->wandb) (1.25.9)\n",
+      "Requirement already satisfied: certifi in ./env/lib/python3.7/site-packages (from sentry-sdk>=0.4.0->wandb) (2020.4.5.1)\n",
+      "Requirement already satisfied: gitdb<5,>=4.0.1 in ./env/lib/python3.7/site-packages (from GitPython>=1.0.0->wandb) (4.0.5)\n",
+      "Requirement already satisfied: graphql-core<2,>=0.5.0 in ./env/lib/python3.7/site-packages (from gql==0.2.0->wandb) (1.1)\n",
+      "Requirement already satisfied: promise<3,>=2.0 in ./env/lib/python3.7/site-packages (from gql==0.2.0->wandb) (2.3)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in ./env/lib/python3.7/site-packages (from requests>=2.0.0->wandb) (3.0.4)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in ./env/lib/python3.7/site-packages (from requests>=2.0.0->wandb) (2.9)\n",
+      "Requirement already satisfied: pathtools>=0.1.1 in ./env/lib/python3.7/site-packages (from watchdog>=0.8.3->wandb) (0.1.2)\n",
+      "Requirement already satisfied: smmap<4,>=3.0.1 in ./env/lib/python3.7/site-packages (from gitdb<5,>=4.0.1->GitPython>=1.0.0->wandb) (3.0.4)\n",
+      "\u001b[33mWARNING: You are using pip version 19.2.3, however version 20.1.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install wandb"
    ]
   },
   {
