Wandb Integration with Noob Test

--- a/Noob_Test.ipynb
+++ b/Noob_Test.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'wandb'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-b304df018500>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mwandb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'wandb'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import torch\n",
@@ -30,58 +18,189 @@
     "    Batch, NoamOptimizer,\n",
     "    LabelSmoothing, train_step\n",
     ")\n",
-    "from sanity_tests import (\n",
-    "    test_subsequent_mask, test_positional_encoding, test_noam_lr_policy,\n",
-    "    test_label_smoothing_target_distribution, test_label_smoothing_regularization\n",
-    ")"
+    "from matplotlib import pyplot as plt\n",
+    "from src.utils import subsequent_mask\n",
+    "from src.blocks import PositionalEncoding\n",
+    "from src.training import NoamOptimizer, LabelSmoothing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                Logging results to <a href=\"https://wandb.com\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch\" target=\"_blank\">https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch</a><br/>\n",
+       "                Run page: <a href=\"https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/2zvl0gwq\" target=\"_blank\">https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/2zvl0gwq</a><br/>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "W&B Run: https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/2zvl0gwq"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.environ['WANDB_API_KEY'] = WANDB_API_KEY\n",
+    "os.environ['WANDB_NOTEBOOK_NAME'] = 'Noob_Test'\n",
+    "wandb.init(project=\"transformer-pytorch\", name=\"noob-test\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run Sanity Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(5, 5))\n",
+    "plt.imshow(subsequent_mask(20)[0])\n",
+    "plt.title('Test for Subsequent Mask')\n",
+    "wandb.log({'Test for Subsequent Mask': plt})\n",
+    "plt.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: wandb in ./env/lib/python3.7/site-packages (0.9.0)\n",
-      "Requirement already satisfied: shortuuid>=0.5.0 in ./env/lib/python3.7/site-packages (from wandb) (1.0.1)\n",
-      "Requirement already satisfied: sentry-sdk>=0.4.0 in ./env/lib/python3.7/site-packages (from wandb) (0.14.4)\n",
-      "Requirement already satisfied: GitPython>=1.0.0 in ./env/lib/python3.7/site-packages (from wandb) (3.1.3)\n",
-      "Requirement already satisfied: gql==0.2.0 in ./env/lib/python3.7/site-packages (from wandb) (0.2.0)\n",
-      "Requirement already satisfied: Click>=7.0 in ./env/lib/python3.7/site-packages (from wandb) (7.1.2)\n",
-      "Requirement already satisfied: psutil>=5.0.0 in ./env/lib/python3.7/site-packages (from wandb) (5.7.0)\n",
-      "Requirement already satisfied: nvidia-ml-py3>=7.352.0 in ./env/lib/python3.7/site-packages (from wandb) (7.352.0)\n",
-      "Requirement already satisfied: requests>=2.0.0 in ./env/lib/python3.7/site-packages (from wandb) (2.23.0)\n",
-      "Requirement already satisfied: six>=1.10.0 in ./env/lib/python3.7/site-packages (from wandb) (1.15.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in ./env/lib/python3.7/site-packages (from wandb) (2.8.1)\n",
-      "Requirement already satisfied: subprocess32>=3.5.3 in ./env/lib/python3.7/site-packages (from wandb) (3.5.4)\n",
-      "Requirement already satisfied: configparser>=3.8.1 in ./env/lib/python3.7/site-packages (from wandb) (5.0.0)\n",
-      "Requirement already satisfied: PyYAML>=3.10 in ./env/lib/python3.7/site-packages (from wandb) (5.3.1)\n",
-      "Requirement already satisfied: watchdog>=0.8.3 in ./env/lib/python3.7/site-packages (from wandb) (0.10.2)\n",
-      "Requirement already satisfied: docker-pycreds>=0.4.0 in ./env/lib/python3.7/site-packages (from wandb) (0.4.0)\n",
-      "Requirement already satisfied: urllib3>=1.10.0 in ./env/lib/python3.7/site-packages (from sentry-sdk>=0.4.0->wandb) (1.25.9)\n",
-      "Requirement already satisfied: certifi in ./env/lib/python3.7/site-packages (from sentry-sdk>=0.4.0->wandb) (2020.4.5.1)\n",
-      "Requirement already satisfied: gitdb<5,>=4.0.1 in ./env/lib/python3.7/site-packages (from GitPython>=1.0.0->wandb) (4.0.5)\n",
-      "Requirement already satisfied: graphql-core<2,>=0.5.0 in ./env/lib/python3.7/site-packages (from gql==0.2.0->wandb) (1.1)\n",
-      "Requirement already satisfied: promise<3,>=2.0 in ./env/lib/python3.7/site-packages (from gql==0.2.0->wandb) (2.3)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in ./env/lib/python3.7/site-packages (from requests>=2.0.0->wandb) (3.0.4)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in ./env/lib/python3.7/site-packages (from requests>=2.0.0->wandb) (2.9)\n",
-      "Requirement already satisfied: pathtools>=0.1.1 in ./env/lib/python3.7/site-packages (from watchdog>=0.8.3->wandb) (0.1.2)\n",
-      "Requirement already satisfied: smmap<4,>=3.0.1 in ./env/lib/python3.7/site-packages (from gitdb<5,>=4.0.1->GitPython>=1.0.0->wandb) (3.0.4)\n",
-      "\u001b[33mWARNING: You are using pip version 19.2.3, however version 20.1.1 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install wandb"
+    "plt.figure(figsize=(15, 5))\n",
+    "pe = PositionalEncoding(20, 0)\n",
+    "y = pe.forward(\n",
+    "    torch.autograd.Variable(\n",
+    "        torch.zeros(1, 100, 20)\n",
+    "    )\n",
+    ")\n",
+    "plt.plot(np.arange(100), y[0, :, 4:8].data.numpy())\n",
+    "plt.legend([\"dim %d\" % p for p in [4, 5, 6, 7]])\n",
+    "plt.title('Test for Positional Encoding')\n",
+    "wandb.log({'Test for Positional Encoding': wandb.Image(plt)})\n",
+    "plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizers = [\n",
+    "    NoamOptimizer(512, 1, 4000, None),\n",
+    "    NoamOptimizer(512, 1, 8000, None),\n",
+    "    NoamOptimizer(256, 1, 4000, None)\n",
+    "]\n",
+    "plt.plot(\n",
+    "    np.arange(1, 20000),\n",
+    "    [[opt.rate(i) for opt in optimizers] for i in range(1, 20000)]\n",
+    ")\n",
+    "plt.legend([\"512:4000\", \"512:8000\", \"256:4000\"])\n",
+    "plt.title('Test for Noam Learning Rate Policy')\n",
+    "wandb.log({'Test for Noam Learning Rate Policy': wandb.Image(plt)})\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/dist-packages/torch/nn/_reduction.py:43: UserWarning: size_average and reduce args will be deprecated, please use reduction='sum' instead.\n",
+      "  warnings.warn(warning.format(ret))\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[32m\u001b[41mERROR\u001b[0m Error uploading \"config.yaml\": FileNotFoundError, [Errno 2] No such file or directory: '/tmp/tmpu_setibywandb/39g1t369-config.yaml'\n"
+     ]
+    }
+   ],
+   "source": [
+    "criterion = LabelSmoothing(5, 0, 0.4)\n",
+    "predict = torch.FloatTensor(\n",
+    "    [\n",
+    "        [0, 0.2, 0.7, 0.1, 0],\n",
+    "        [0, 0.2, 0.7, 0.1, 0],\n",
+    "        [0, 0.2, 0.7, 0.1, 0]\n",
+    "    ]\n",
+    ")\n",
+    "v = criterion(\n",
+    "    torch.autograd.Variable(predict.log()),\n",
+    "    torch.autograd.Variable(\n",
+    "        torch.LongTensor([2, 1, 0])\n",
+    "    )\n",
+    ")\n",
+    "plt.imshow(criterion.true_dist)\n",
+    "plt.title('Test for Label Smoothing (Target Distribution)')\n",
+    "wandb.log({'Test for Label Smoothing (Target Distribution)': plt})\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/dist-packages/torch/nn/_reduction.py:43: UserWarning: size_average and reduce args will be deprecated, please use reduction='sum' instead.\n",
+      "  warnings.warn(warning.format(ret))\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[32m\u001b[41mERROR\u001b[0m Error uploading \"config.yaml\": FileNotFoundError, [Errno 2] No such file or directory: '/tmp/tmpdp8h4b0twandb/yxrwcdmj-config.yaml'\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[32m\u001b[41mERROR\u001b[0m Error uploading \"wandb-metadata.json\": CommError, File /tmp/tmpdp8h4b0twandb/2k80w0e4-wandb-metadata.json size shrank from 922 to 0 while it was being uploaded.\n"
+     ]
+    }
+   ],
+   "source": [
+    "criterion = LabelSmoothing(5, 0, 0.1)\n",
+    "\n",
+    "def loss(x):\n",
+    "    d = x + 3 * 1\n",
+    "    prediction = torch.FloatTensor([[0, x / d, 1 / d, 1 / d, 1 / d], ])\n",
+    "    return criterion(\n",
+    "        torch.autograd.Variable(prediction.log()),\n",
+    "        torch.autograd.Variable(torch.LongTensor([1]))).data.item()\n",
+    "\n",
+    "plt.plot(np.arange(1, 100), [loss(x) for x in range(1, 100)])\n",
+    "plt.title('Test for Label Smoothing (Regularization)')\n",
+    "wandb.log({'Test for Label Smoothing (Regularization)': wandb.Image(plt)})\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Noob Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,18 +245,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/soumikrakshit/Workspace/transformer.pytorch/src/model.py:76: UserWarning: nn.init.xavier_uniform is now deprecated in favor of nn.init.xavier_uniform_.\n",
+      "/notebooks/transformer.pytorch/src/model.py:76: UserWarning: nn.init.xavier_uniform is now deprecated in favor of nn.init.xavier_uniform_.\n",
       "  torch.nn.init.xavier_uniform(p)\n",
-      "/usr/local/lib/python3.7/site-packages/torch/nn/_reduction.py:43: UserWarning: size_average and reduce args will be deprecated, please use reduction='sum' instead.\n",
+      "/usr/local/lib/python3.6/dist-packages/torch/nn/_reduction.py:43: UserWarning: size_average and reduce args will be deprecated, please use reduction='sum' instead.\n",
       "  warnings.warn(warning.format(ret))\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<wandb.wandb_torch.TorchGraph at 0x7f37e56bca90>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -152,58 +281,173 @@
     "        model.parameters(), lr=0,\n",
     "        betas=(0.9, 0.98), eps=1e-9\n",
     "    )\n",
-    ")"
+    ")\n",
+    "\n",
+    "wandb.watch(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../torch/csrc/utils/python_arg_parser.cpp:756: UserWarning: This overload of nonzero is deprecated:\n",
-      "\tnonzero(Tensor input, *, Tensor out)\n",
-      "Consider using one of the following signatures instead:\n",
-      "\tnonzero(Tensor input, *, bool as_tuple)\n"
+      "20it [00:09,  2.16it/s]\n",
+      "5it [00:01,  2.93it/s]\n",
+      "0it [00:00, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch Step: 1 Loss: 3.222836 Tokens per Sec: 356.105133\n",
-      "Epoch Step: 1 Loss: 1.898097 Tokens per Sec: 514.855530\n",
-      "tensor(1.8864)\n",
-      "Epoch Step: 1 Loss: 1.961129 Tokens per Sec: 477.678619\n",
-      "Epoch Step: 1 Loss: 1.615044 Tokens per Sec: 545.999451\n",
-      "tensor(1.6368)\n",
-      "Epoch Step: 1 Loss: 1.881133 Tokens per Sec: 312.640778\n",
-      "Epoch Step: 1 Loss: 1.423026 Tokens per Sec: 550.668030\n",
-      "tensor(1.4335)\n",
-      "Epoch Step: 1 Loss: 1.788222 Tokens per Sec: 462.523651\n",
-      "Epoch Step: 1 Loss: 1.237994 Tokens per Sec: 498.938354\n",
-      "tensor(1.2300)\n",
-      "Epoch Step: 1 Loss: 1.650148 Tokens per Sec: 359.106323\n",
-      "Epoch Step: 1 Loss: 0.960283 Tokens per Sec: 471.688324\n",
-      "tensor(0.9734)\n",
-      "Epoch Step: 1 Loss: 1.151660 Tokens per Sec: 358.550964\n",
-      "Epoch Step: 1 Loss: 0.588864 Tokens per Sec: 339.864563\n",
-      "tensor(0.6103)\n",
-      "Epoch Step: 1 Loss: 0.920910 Tokens per Sec: 410.786011\n",
-      "Epoch Step: 1 Loss: 0.376575 Tokens per Sec: 511.768738\n",
-      "tensor(0.4024)\n",
-      "Epoch Step: 1 Loss: 0.554213 Tokens per Sec: 342.275574\n",
-      "Epoch Step: 1 Loss: 0.228428 Tokens per Sec: 427.981476\n",
-      "tensor(0.2461)\n",
-      "Epoch Step: 1 Loss: 0.494119 Tokens per Sec: 141.509064\n",
-      "Epoch Step: 1 Loss: 0.220053 Tokens per Sec: 370.060181\n",
-      "tensor(0.1928)\n",
-      "Epoch Step: 1 Loss: 0.487329 Tokens per Sec: 343.877258\n",
-      "Epoch Step: 1 Loss: 0.125596 Tokens per Sec: 419.193542\n",
-      "tensor(0.1224)\n"
+      "tensor(1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:08,  2.37it/s]\n",
+      "5it [00:01,  3.21it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:08,  2.47it/s]\n",
+      "5it [00:01,  3.62it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:08,  2.39it/s]\n",
+      "5it [00:01,  2.52it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:07,  2.61it/s]\n",
+      "5it [00:01,  3.95it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:09,  2.20it/s]\n",
+      "5it [00:01,  3.10it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:09,  2.20it/s]\n",
+      "5it [00:01,  2.94it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:08,  2.24it/s]\n",
+      "5it [00:02,  2.22it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:09,  2.20it/s]\n",
+      "5it [00:01,  3.12it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:08,  2.28it/s]\n",
+      "5it [00:01,  2.95it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0)\n"
      ]
     }
    ],
@@ -215,7 +459,7 @@
     "        SimpleLossCompute(\n",
     "            model.generator,\n",
     "            criterion, model_opt\n",
-    "        )\n",
+    "        ), log_on_wandb=True\n",
     "    )\n",
     "    model.eval()\n",
     "    print(\n",
@@ -224,14 +468,14 @@
     "            SimpleLossCompute(\n",
     "                model.generator,\n",
     "                criterion, None\n",
-    "            )\n",
+    "            ), log_on_wandb=True\n",
     "        )\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.8"
   },
   "pycharm": {
    "stem_cell": {
