Updated Noob Test

--- a/Noob_Test.ipynb
+++ b/Noob_Test.ipynb
@@ -35,7 +35,7 @@
        "\n",
        "                Logging results to <a href=\"https://wandb.com\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
        "                Project page: <a href=\"https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch\" target=\"_blank\">https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch</a><br/>\n",
-       "                Run page: <a href=\"https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/2zvl0gwq\" target=\"_blank\">https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/2zvl0gwq</a><br/>\n",
+       "                Run page: <a href=\"https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/19n8lu61\" target=\"_blank\">https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/19n8lu61</a><br/>\n",
        "            "
       ],
       "text/plain": [
@@ -48,7 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "W&B Run: https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/2zvl0gwq"
+       "W&B Run: https://app.wandb.ai/19soumik-rakshit96/transformer-pytorch/runs/19n8lu61"
       ]
      },
      "execution_count": 2,
@@ -133,8 +133,7 @@
      "output_type": "stream",
      "text": [
       "/usr/local/lib/python3.6/dist-packages/torch/nn/_reduction.py:43: UserWarning: size_average and reduce args will be deprecated, please use reduction='sum' instead.\n",
-      "  warnings.warn(warning.format(ret))\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[32m\u001b[41mERROR\u001b[0m Error uploading \"config.yaml\": FileNotFoundError, [Errno 2] No such file or directory: '/tmp/tmpu_setibywandb/39g1t369-config.yaml'\n"
+      "  warnings.warn(warning.format(ret))\n"
      ]
     }
    ],
@@ -170,8 +169,7 @@
      "text": [
       "/usr/local/lib/python3.6/dist-packages/torch/nn/_reduction.py:43: UserWarning: size_average and reduce args will be deprecated, please use reduction='sum' instead.\n",
       "  warnings.warn(warning.format(ret))\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[32m\u001b[41mERROR\u001b[0m Error uploading \"config.yaml\": FileNotFoundError, [Errno 2] No such file or directory: '/tmp/tmpdp8h4b0twandb/yxrwcdmj-config.yaml'\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[32m\u001b[41mERROR\u001b[0m Error uploading \"wandb-metadata.json\": CommError, File /tmp/tmpdp8h4b0twandb/2k80w0e4-wandb-metadata.json size shrank from 922 to 0 while it was being uploaded.\n"
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[32m\u001b[41mERROR\u001b[0m Error uploading \"config.yaml\": FileNotFoundError, [Errno 2] No such file or directory: '/tmp/tmpnr0jv7uqwandb/2bv8aijp-config.yaml'\n"
      ]
     }
    ],
@@ -261,7 +259,7 @@
     {
      "data": {
       "text/plain": [
-       "[<wandb.wandb_torch.TorchGraph at 0x7f37e56bca90>]"
+       "[<wandb.wandb_torch.TorchGraph at 0x7f56f9ed5940>]"
       ]
      },
      "execution_count": 10,
@@ -288,14 +286,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:09,  2.16it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:07,  2.70it/s]\n",
+      "5it [00:01,  4.12it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:06,  3.12it/s]\n",
+      "5it [00:01,  4.58it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:06,  3.05it/s]\n",
+      "5it [00:01,  3.98it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:06,  3.13it/s]\n",
       "5it [00:01,  2.93it/s]\n",
       "0it [00:00, ?it/s]"
      ]
@@ -304,15 +364,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1)\n"
+      "Epoch: 5\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:08,  2.37it/s]\n",
-      "5it [00:01,  3.21it/s]\n",
+      "20it [00:06,  2.90it/s]\n",
+      "5it [00:01,  3.14it/s]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -320,15 +380,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1)\n"
+      "Epoch: 6\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:08,  2.47it/s]\n",
-      "5it [00:01,  3.62it/s]\n",
+      "20it [00:06,  2.93it/s]\n",
+      "5it [00:01,  3.84it/s]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -336,15 +396,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1)\n"
+      "Epoch: 7\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:08,  2.39it/s]\n",
-      "5it [00:01,  2.52it/s]\n",
+      "20it [00:06,  3.02it/s]\n",
+      "5it [00:01,  4.18it/s]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -352,15 +412,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1)\n"
+      "Epoch: 8\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:07,  2.61it/s]\n",
-      "5it [00:01,  3.95it/s]\n",
+      "20it [00:06,  2.96it/s]\n",
+      "5it [00:01,  2.84it/s]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -368,91 +428,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1)\n"
+      "Epoch: 9\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20it [00:09,  2.20it/s]\n",
-      "5it [00:01,  3.10it/s]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "20it [00:09,  2.20it/s]\n",
-      "5it [00:01,  2.94it/s]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "20it [00:08,  2.24it/s]\n",
-      "5it [00:02,  2.22it/s]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "20it [00:09,  2.20it/s]\n",
-      "5it [00:01,  3.12it/s]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "20it [00:08,  2.28it/s]\n",
-      "5it [00:01,  2.95it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0)\n"
+      "11it [00:03,  3.07it/s]"
      ]
     }
    ],
    "source": [
     "for epoch in range(10):\n",
+    "    print('Epoch:', (epoch + 1))\n",
     "    model.train()\n",
     "    train_step(\n",
     "        data_gen(V, 30, 20), model, \n",
@@ -462,20 +451,18 @@
     "        ), log_on_wandb=True\n",
     "    )\n",
     "    model.eval()\n",
-    "    print(\n",
-    "        train_step(\n",
-    "            data_gen(V, 30, 5), model, \n",
-    "            SimpleLossCompute(\n",
-    "                model.generator,\n",
-    "                criterion, None\n",
-    "            ), log_on_wandb=True\n",
-    "        )\n",
+    "    train_step(\n",
+    "        data_gen(V, 30, 5), model, \n",
+    "        SimpleLossCompute(\n",
+    "            model.generator,\n",
+    "            criterion, None\n",
+    "        ), log_on_wandb=True\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,17 +488,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.eval()\n",
     "source = torch.autograd.Variable(\n",
